@@ -15,3 +15,4 @@ subj_cache_size = 1549
 obj_cache_size = 8191
 watch_fs = ext2,ext3,ext4,tmpfs,xfs,vfat,iso9660
 trust = rpmdb,file
+integrity = none
